--- a/Profile.html
+++ b/Profile.html
@@ -102,7 +102,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Manish Kumar Pankaj | Built with data from <a href="https://www.linkedin.com/in/manish-kumar-pankaj-82a9a0338" target="_blank">LinkedIn</a></p>
+    <p> 2025 Manish Kumar Pankaj </p>
   </footer>
 </body>
 </html>
