--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <div class="header-content">
-      <img src="your-photo.jpg" alt="Profile Photo" class="profile-pic">
+      <img src="IMG_20250903_160712.jpg" alt="Profile Photo" class="profile-pic">
       <div class="info">
         <h1>Manish Kumar Pankaj</h1>
         <p>Email: <a href="mailto:manishkumarpankaj119@gmail.com">manishkumarpankaj119@gmail.com</a></p>
