--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
   </section>
 
   <section>
+  <h2>Work Experience</h2>
+  <ul>
+    <li>
+      <b>Intern</b>, HighFurries (Sep 2025 - Present, 1 mo) <br>
+      Location: New Delhi, Delhi, India <br>
+      Mode: Hybrid
+    </li>
+    <li>
+      <b>Core Member</b>, Boundless - IITM BS Travel Society (Sep 2025 - Present, 1 mo)
+    </li>
+  </ul>
+  </section>
+
+  <section>
     <h2>Languages</h2>
     <p>English, Hindi</p>
   </section>
