--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <header>
         <div class="header-content">
             <!-- Placeholder image used here. Replace src with your actual image path -->
-            <img src="https://placehold.co/140x140/e2e8f0/2563eb?text=MKP" alt="Manish Kumar Pankaj" class="profile-pic">
+            <img src="IMG_20250903_160712.jpg" alt="Manish Kumar Pankaj" class="profile-pic">
             
             <div class="header-info">
                 <h1>Manish Kumar Pankaj</h1>
@@ -769,7 +769,7 @@
 
     <!-- Fixed Footer Bar -->
     <div class="footer-fixed">
-        <span style="color: #64748b; font-size: 0.9rem;">2025 Manish Kumar Pankaj Portfolio CV</span>
+        <span style="color: #64748b; font-size: 0.9rem;">© 2025 Manish Kumar Pankaj. All rights reserved. · Portfolio CV</span>
     </div>
 </div>
 
