--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
     <header>
         <div class="header-content">
             <!-- Placeholder image used here. Replace src with your actual image path -->
-            <img src="IMG_20250903_160712.jpg" onerror="this.src='https://ui-avatars.com/api/?name=Manish+Kumar&background=2563eb&color=fff'" alt="Manish Kumar Pankaj" class="profile-pic">
+            <img src="728A9438.jpg" onerror="this.src='https://ui-avatars.com/api/?name=Manish+Kumar&background=2563eb&color=fff'" alt="Manish Kumar Pankaj" class="profile-pic">
             
             <div class="header-info">
                 <h1>Manish Kumar Pankaj</h1>
